<resources>
    <string name="app_name" translatable="false">Ehit</string>
    <string name="label_gallery_list_fragment" translatable="false">GalleryListFragment</string>
    <string name="label_gallery_detail_fragment" translatable="false">GalleryDetailFragment</string>
    <string name="label_login_fragment" translatable="false">LoginFragment</string>
    <string name="label_security_fragment" translatable="false">SecurityFragment</string>
    <string name="label_disclaimer_fragment" translatable="false">DisclaimerFragment</string>
    <string name="label_search_fragment" translatable="false">SearchFragment</string>
    <string name="label_main_fragment" translatable="false">MainFragment</string>
    <string name="label_favourite_fragment" translatable="false">FavouriteFragment</string>
    <string name="transition_name_gallery_list_toolbar" translatable="false">GalleryListToolbarTransition</string>
    <string name="hint_ipb_member_id" translatable="false">ipb_member_id</string>
    <string name="hint_ipb_pass_hash" translatable="false">ipb_pass_hash</string>
    <string name="hint_igneous" translatable="false">igneous</string>
    <string name="text_domain_ex_ht" translatable="false">exhentai.org</string>
    <string name="text_domain_e_ht" translatable="false">e-hentai.org</string>
    <string name="text_1" translatable="false">1</string>
    <string name="text_2" translatable="false">2</string>
    <string name="text_3" translatable="false">3</string>
    <string name="text_4" translatable="false">4</string>
    <string name="text_5" translatable="false">5</string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="page_separate" translatable="false">%d/%d</string>
    <string name="last_version_url" translatable="false">https://github.com/mmm3w/Ehit/releases/latest</string>
    <string name="repo_url" translatable="false">https://github.com/mmm3w/Ehit</string>
    <string name="license_url" translatable="false">https://github.com/mmm3w/Ehit/blob/master/LICENSE</string>
    <string name="content_description_back_btn" translatable="false">page back btn</string>
    <string name="error_parse_throwable_text">Data parse error</string>
    <string name="comment_time_format_pattern">dd MMM yyyy,HH:mm</string>
    <string name="description_page_jump">Page jump support</string>
    <string name="description_go_top">Back to top support</string>
    <string name="description_refresh">Refresh support</string>
    <string name="description_search">Search support</string>
    <string name="description_quick_search">Quick search support</string>
    <string name="description_download_notification_name">Download Service Notification</string>
    <string name="description_download_notification">Description</string>
    <string name="title_page_go_to">Go to</string>
    <string name="title_cookie">Cookie</string>
    <string name="title_add_favorites">Add to favorites</string>
    <string name="title_quick_search">Quick Search</string>
    <string name="title_jump_page">Jump page to (1 to %d)</string>
    <string name="title_add_quick_search">Add quick search</string>
    <string name="hint_account">account</string>
    <string name="hint_password">password</string>
    <string name="hint_search">Search</string>
    <string name="hint_subscription">Subscription</string>
    <string name="hint_popular">Popular</string>
    <string name="hint_rate_successfully">Rate successfully</string>
    <string name="hint_gallery_info">Gallery Info</string>
    <string name="hint_copy_successfully">Copy successfully</string>
    <string name="hint_remove_favorite_success">Removed from favorites</string>
    <string name="hint_add_favorite_success">Added to favorites</string>
    <string name="hint_remove_favorite_failure">Failed to remove from favorites</string>
    <string name="hint_add_favorite_failure">Failed to add to favorites</string>
    <string name="hint_exit_by_next_back">Press again to exit</string>
    <string name="hint_no_data">No data</string>
    <string name="hint_host">Host</string>
    <string name="hint_port">Port</string>
    <string name="hint_waiting">Waiting…</string>
    <string name="hint_save_failed">Save failed</string>
    <string name="hint_save_success">Successfully saved</string>
    <string name="error_content_empty">Content is empty</string>
    <string name="error_invalid_port">Invalid port</string>
    <string name="error_no_data">No data</string>
    <string name="error_not_login">Not login</string>
    <string name="error_redirect">302 Redirect</string>
    <string name="text_test">Test content</string>
    <string name="text_app_waring">The content of this application is from the Internet. Some of it may do physical or mental harm to you.\n You have learnt the risks above and would like to undertake them.</string>
    <string name="text_app_illustrate">This app is not an official app and not affiliated with e-hentai.org/exhentai.org in any way.</string>
    <string name="text_star_1">1 star</string>
    <string name="text_star_2">2 stars</string>
    <string name="text_star_3">3 stars</string>
    <string name="text_star_4">4 stars</string>
    <string name="text_star_5">5 stars</string>
    <string name="text_menu_main_page">Main Page</string>
    <string name="text_menu_subscription">Subscription</string>
    <string name="text_menu_whats_hot">What\'s hot</string>
    <string name="text_menu_favourite">Favourite</string>
    <string name="text_menu_history">History</string>
    <string name="text_menu_download">Download</string>
    <string name="text_menu_setting">Setting</string>
    <string name="text_skip">Skip</string>
    <string name="text_login">Login</string>
    <string name="text_retry">Retry</string>
    <string name="text_login_by_account">Login by account</string>
    <string name="text_login_by_cookie">Login by cookie</string>
    <string name="text_rate">Rate</string>
    <string name="text_warning">Warning</string>
    <string name="text_default">Default</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_refuse">Refuse</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_copy">Copy</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_all">All</string>
    <string name="text_share">Share</string>
    <string name="text_save">Save</string>
    <string name="text_save_to_system_album">Save to system album</string>
    <string name="text_save_to">Save to …</string>
    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>
    <string name="text_seed">Seed</string>
    <string name="text_export">Export</string>
    <string name="text_h_at_h_download">H@H Download</string>
    <string name="text_search_thumb">Search thumb</string>
    <string name="text_download">Download</string>
    <string name="text_read">Read</string>
    <string name="text_search">Search</string>
    <string name="text_advanced_options">Advanced Options</string>
    <string name="text_search_gallery_name">Search Gallery Name</string>
    <string name="text_search_gallery_tags">Search Gallery Tags</string>
    <string name="text_search_gallery_description">Search Gallery Description</string>
    <string name="text_search_torrent_filenames">Search Torrent Filenames</string>
    <string name="text_only_show_galleries_with_torrents">Only Show Galleries With Torrents</string>
    <string name="text_search_low_power_tags">Search Low-Power Tags</string>
    <string name="text_search_downvoted_tags">Search Downvoted Tags</string>
    <string name="text_show_expunged_galleries">Show Expunged Galleries</string>
    <string name="text_minimum_rating">Minimum Rating:</string>
    <string name="text_search_between_page">Between</string>
    <string name="text_to">to</string>
    <string name="text_pages">pages</string>
    <string name="text_disable_default_filters">Disable default filters for:</string>
    <string name="text_theme">Theme</string>
    <string name="text_language">Language</string>
    <string name="text_uploader">Uploader</string>
    <string name="text_tags">Tags</string>
    <string name="text_enable_advanced_options">Enable advanced options</string>
    <string name="text_more_information">More info</string>
    <string name="text_similar">Similar</string>
    <string name="text_reviews_number">%d reviews</string>
    <string name="text_no_comments">No comments</string>
    <string name="text_no_more_comments">No more comments</string>
    <string name="text_more_comments">More comments</string>
    <string name="text_quick_search">Quick search</string>
    <string name="text_advanced_search">Advanced search</string>
    <string name="text_completed">Completed</string>
    <string name="text_uncompleted">Uncompleted</string>
    <string name="text_page_front">Page:</string>
    <string name="text_page_back" />
    <string name="text_page_range">%d to %d</string>
    <string name="text_start_download">Start download…</string>
    <string name="text_proxy">Proxy</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_version">Version</string>
    <string name="text_check_for_updates">Check for updates</string>
    <string name="text_source_code">Source code</string>
    <string name="text_license">License</string>
    <string name="text_app_lock">App lock</string>
    <string name="text_app_lock_summary">It is dependent on the system\'s authentication</string>
    <string name="text_export_data">Export data</string>
    <string name="text_export_data_summary">Export some data as json.</string>
    <string name="text_import_data">Import data</string>
    <string name="text_import_data_summary">Import json data to local.</string>
    <string name="text_setting_eh">EH Setting</string>
    <string name="text_setting_eh_summary">Cookie, Site, Tags</string>
    <string name="text_setting_read">Read</string>
    <string name="text_setting_read_summary">Screen orientation, Reading direction</string>
    <string name="text_setting_download">Download</string>
    <string name="text_setting_download_summary">Multi-thread, Set original</string>
    <string name="text_setting_security_and_privacy">Security And Privacy</string>
    <string name="text_setting_security_and_privacy_summary">App lock, Analytics</string>
    <string name="text_setting_other">Other</string>
    <string name="text_setting_other_summary">Proxy</string>
    <string name="text_setting_about">About</string>
    <string name="text_setting_about_summary">Version</string>
    <string name="text_setting_cookie">Cookie</string>
    <string name="text_setting_cookie_summary">Check cookie</string>
    <string name="text_setting_site">Site</string>
    <string name="text_setting_show_page">Show gallery pages</string>
    <string name="text_setting_open_site_setting">Open site setting</string>
    <string name="text_setting_screen_orientation">Screen orientation</string>
    <string name="text_setting_image_zoom">Image zoom</string>
    <string name="text_setting_keep_bright">Keep bright</string>
    <string name="text_setting_show_time">Show time</string>
    <string name="text_setting_show_battery">Show battery</string>
    <string name="text_setting_show_progress">Show progress</string>
    <string name="text_setting_show_page_padding">Show page padding</string>
    <string name="text_setting_volume_button_turn_pages">Volume button turn pages</string>
    <string name="text_setting_full_screen">Full screen</string>
    <string name="text_setting_disable_screenshots">Disable screenshots</string>
    <string name="text_setting_data_analytics">Data analytics</string>
    <string name="text_setting_about_analytics">About analytics</string>
    <string name="text_setting_about_analytics_summary">This feature is powered by Google Firebase.</string>
</resources>