<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference app:title="@string/text_language" />

    <com.mitsuki.ehit.ui.common.widget.IntListPreference
        app:defaultValue="0"
        app:key="SP_THEME"
        app:title="主题"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:key="SP_PROXY_MODE"
        app:title="@string/text_proxy" />

    <Preference
        app:key="export_data"
        app:summary="@string/text_export_data_summary"
        app:title="@string/text_export_data" />

    <Preference
        app:key="import_data"
        app:summary="@string/text_import_data_summary"
        app:title="@string/text_import_data" />
</PreferenceScreen>