<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:icon="@drawable/ic_baseline_lock_24"
        app:key="SP_SECURITY"
        app:summary="@string/text_app_lock_summary"
        app:title="@string/text_app_lock" />

    <SwitchPreference
        app:key="SP_DISABLE_SCREENSHOTS"
        app:icon="@drawable/ic_baseline_stop_screen_share_24"
        app:title="@string/text_setting_disable_screenshots" />

    <SwitchPreference
        app:icon="@drawable/ic_baseline_analytics_24"
        app:key="SP_DATA_ANALYTICS"
        app:title="@string/text_setting_data_analytics" />

    <Preference
        app:summary="@string/text_setting_about_analytics_summary"
        app:title="@string/text_setting_about_analytics" />

</PreferenceScreen>