<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/text_menu_main_page" />
        <item
            android:id="@+id/nav_subscription"
            android:title="@string/text_menu_subscription" />
        <item
            android:id="@+id/nav_popular"
            android:title="@string/text_menu_whats_hot" />
        <item
            android:id="@+id/nav_favourite"
            android:title="@string/text_menu_favourite" />
    </group>

<!--    <item-->
<!--        android:id="@+id/nav_history"-->
<!--        android:title="@string/text_menu_history" />-->
    <item
        android:id="@+id/nav_download"
        android:title="@string/text_menu_download" />
    <item
        android:id="@+id/nav_setting"
        android:title="@string/text_menu_setting" />
</menu>