<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:icon="@drawable/ic_baseline_login_24"
        app:key="setting_logout"
        app:persistent="false"
        app:title="@string/text_sign_out" />

    <Preference
        app:icon="@drawable/ic_baseline_cookie_24"
        app:isPreferenceVisible="false"
        app:key="setting_cookie"
        app:persistent="false"
        app:summary="@string/text_setting_cookie_summary"
        app:title="@string/text_setting_cookie" />

    <com.mitsuki.ehit.ui.setting.widget.IntListPreference
        app:defaultValue="0"
        app:key="SP_DOMAIN"
        app:title="@string/text_setting_site"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="SP_SHOW_PAGE"
        app:title="@string/text_setting_show_page" />

    <Preference
        android:key="setting_site"
        app:icon="@drawable/ic_baseline_web_24"
        app:persistent="false"
        app:title="@string/text_setting_open_site_setting" />


</PreferenceScreen>