<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_main"
    app:startDestination="@id/main_fragment">

    <fragment
        android:id="@+id/gallery_list_fragment"
        android:name="com.mitsuki.ehit.ui.fragment.GalleryListFragment"
        android:label="@string/label_gallery_list_fragment">
        <action
            android:id="@+id/action_gallery_list_fragment_to_gallery_detail_fragment"
            app:destination="@id/gallery_detail_fragment" />
        <action
            android:id="@+id/action_gallery_list_fragment_to_search_fragment"
            app:destination="@id/search_fragment" />
    </fragment>


    <fragment
        android:id="@+id/gallery_detail_fragment"
        android:name="com.mitsuki.ehit.ui.fragment.GalleryDetailFragment"
        android:label="@string/label_gallery_detail_fragment">
        <action
            android:id="@+id/action_gallery_detail_fragment_to_gallery_list_fragment"
            app:destination="@id/gallery_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/security_fragment"
        android:name="com.mitsuki.ehit.ui.fragment.SecurityFragment"
        android:label="@string/label_security_fragment">
        <action
            android:id="@+id/action_security_fragment_to_gallery_list_fragment"
            app:destination="@id/gallery_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/disclaimer_fragment"
        android:name="com.mitsuki.ehit.ui.fragment.DisclaimerFragment"
        android:label="@string/label_disclaimer_fragment">
        <action
            android:id="@+id/action_disclaimer_fragment_to_login_fragment"
            app:destination="@id/login_fragment" />
    </fragment>

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.mitsuki.ehit.ui.fragment.LoginFragment"
        android:label="@string/label_login_fragment">
        <action
            android:id="@+id/action_login_fragment_to_gallery_list_fragment"
            app:destination="@id/gallery_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/search_fragment"
        android:name="com.mitsuki.ehit.ui.fragment.SearchFragment"
        android:label="@string/label_search_fragment">
        <action
            android:id="@+id/action_search_fragment_to_gallery_list_fragment"
            app:destination="@id/gallery_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/main_fragment"
        android:name="com.mitsuki.ehit.ui.fragment.MainFragment"
        android:label="@string/label_main_fragment">
        <action
            android:id="@+id/action_main_fragment_to_gallery_list_fragment"
            app:destination="@id/gallery_list_fragment" />
        <action
            android:id="@+id/action_main_fragment_to_disclaimer_fragment"
            app:destination="@id/disclaimer_fragment" />
        <action
            android:id="@+id/action_main_fragment_to_security_fragment"
            app:destination="@id/security_fragment" />
    </fragment>

</navigation>