<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/disclaimer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/text_test" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/disclaimer_no_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@drawable/bg_transparent_button"
            android:minHeight="0dp"
            android:text="@string/text_no"
            android:textColor="@color/black_35"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/disclaimer_yes_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@drawable/bg_transparent_button"
            android:minHeight="0dp"
            android:text="@string/text_yes"
            android:textColor="@color/black_35"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

</LinearLayout>