<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_download"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dialog_download_range_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:minWidth="@dimen/dp_48"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingVertical="@dimen/dp_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:text="@string/text_to" />

        <EditText
            android:id="@+id/dialog_download_range_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:minWidth="@dimen/dp_48"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingVertical="@dimen/dp_4" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_download_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_8"
        android:background="?android:attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingVertical="@dimen/dp_8"
        android:text="@string/text_confirm"
        android:textSize="@dimen/sp_16" />

</LinearLayout>