<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/dialog_page_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/text_page_front" />

        <EditText
            android:id="@+id/dialog_page_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:maxWidth="200dp"
            android:minWidth="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/text_page_back" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/dialog_page_seek"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16" />


    <TextView
        android:id="@+id/dialog_page_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_16"
        android:background="?android:attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingVertical="@dimen/dp_8"
        android:text="@string/text_confirm"
        android:textSize="@dimen/sp_16" />

</LinearLayout>